[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Het Naik <awesomehet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^4.2.0"
streamlit = "^1.35.0"
langchain = "^0.2.1"
google-generativeai = "0.5.4"
PyPDF2 = "^3.0.1"
langchain-community = "^0.2.1"
langchain-google-genai = "^1.0.5"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
langchain-core = "^0.2.3"
langchain-mistralai = "^0.1.7"
torch = "^2.3.0"
huggingface-hub = "^0.23.2"
transformers = "^4.41.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
